footer overflow fixed

--- a/source/scss/footer/footer.scss
+++ b/source/scss/footer/footer.scss
@@ -26,6 +26,7 @@
 
 .footer__list {
   margin-top: 9px;
+  max-width: 136px;
 }
 
 .footer__copyright {
